Ultimas correcciones en tests